  EntityApplicationPanel now displays a "Disconnected" message in the title
  EntityDbConnection no longer propagates dbms specific exception to the client
  LoginProxy added
  ConnectionPoolImpl new connection threshold is now configurable from pool monitor
  LoadTestModel generified
  Fixed sorting when columns have been moved around
0.6.0
  EntityComboBoxModel.getEntity(primaryKey) added
  EntityEditModel.containsComboBoxModel(Property) removed
  Javadocs and coverage improvements
  AbstractRemoteServer connection limiting added
  RemoteServer.connectionsAvailable() added
  WebStartServer added
  Configuration.SERVER_CONNECTION_LIMIT added
  EmpDeptLoadTest improved
  ConnectionPoolImplTest now uses QueryLoadTestModel
  EntityDbConnection.setForeignKeyValues() simplified
  Server logging improved
  ClientInstanceMonitor.getLoggingEnabledButtonModel() uses lazy init
  LogEntry, User and ClientInfo read/writeObject implemented
  EntityImpl.read/writeObject optimized a bit more
  CriteriaSet.read/WriteObject optimized
  LoadTestServer refactored and improved
  EntityPanelProvider.tableSearchPanelVisible field added
  DefaultEntityModel.refresh() calls editModel.refreshComboBoxModels() instead of .refresh() which automatically triggered a refresh in the table model, which isn't always the right thing to do
  java.rmi.server.randomIDs=true and java.rmi.server.useCodebaseOnly=true added to server config files
  Tentative fixing of the column movement bug
  DefaultEntityEditModel now refreshes data bound combo box models when they are created
  Property.isReference() removed, instanceof Property.ForeignKeyProperty used instead
  EntityTablePanel does not add the search panel to the search panel scroll panel on initialization anymore
  AbstractFilteredTablePanel, fixed bug causing selection to be cleared during refresh, evtSortingDone was being fired without a previous evtSortingStarted firing
  Cascade refresh functionality removed
  Removed unused images